# itpl2dirtree

./: LICENSE  LICENSE_alhash  Makefile.am  Makefile.in  README-JP.md  README.md  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  alhash.h  e0.c  hash.c.~1.1.1.1.~  hashint.c  itpl2dirtree  itpl2dirtree.c  itpl2dirtree.h  itpl2dirtree.h.~1.1.1.1.~
src/.deps/: hash.Po  hashint.Po  itpl2dirtree.Po
src/CVS/: Entries  Repository  Root
